# agent-tax

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
.codegraph/: daemon.pid
docs/: BUGS_AND_MITIGATIONS.md  DECISIONS.md  SPECS.md
scripts/: discover_fields.py  generate_sample_w2.py  push-all.sh
src/agent_tax/: main.py
src/agent_tax/agent/: extractor.py  guardrails.py  loop.py  tools.py
src/agent_tax/config/: tax_year_2025.py
src/agent_tax/core/: models.py  pdf_filler.py  tax_engine.py  tax_tables.py
src/agent_tax/form_map/: f1040_2025.py
src/agent_tax/obs/: trace.py
src/agent_tax/web/: session.py
tests/: test_extractor.py  test_pdf_filler.py  test_tax_engine.py  test_web_flow.py
