[project]
name = "agent-tax"
version = "0.1.0"
description = "Agentic Tax-Filing Assistant (2025 Form 1040)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.8",
    "pypdf>=5.0",
    "pypdfium2>=4.30",
    "openai>=1.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "reportlab>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
